# hexlet-django-blog

./: pyproject.toml
hexlet_django_blog/: admin.py  settings.py  urls.py  views.py
hexlet_django_blog/article/: .urls.py.swp  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/templates/article/: index.html  show.html
