[tool.poetry]
name = "hexlet_django_blog"
version = "0.1.0"
description = "A simple Django project that implements a blog."
authors = ["algrince"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
